[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "demoknight"
authors = [
    {name = "Kenajcrap"},
]
description = "Automate source engine benchmark capture using rcon and mangohud"
readme = "readme.md"
requires-python = ">=3.7"
keywords = ["rcon", "mangohud", "source-engine"]
license = {text = "GPL-3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "psutil",
    "vdf",
    "rcon",
    "steamid",
    "watchfiles",
    "pyyaml",
    "pywin32; platform_system=='Windows'",
    "mangohud-control; platform_system=='Linux'"
]
version = "0.0.1"

[project.scripts]
demoknight = "demoknight:main"