[build-system]
requires = ["setuptools>=45", "pre-commit"]
build-backend = "setuptools.build_meta"

[project]
name = "demoknight"
authors = [
    {name = "Kenajcrap"},
]
description = "Automate source engine benchmark capture using rcon and mangohud"
readme = "readme.md"
requires-python = ">=3.7"
version = "0.0.2"
keywords = ["rcon", "mangohud", "source-engine"]
license = {text = "GPL-3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "psutil",
    "vdf == 3.4",
    "rcon",
    "steamid",
    "watchfiles",
    "pyyaml",
    "pywin32; platform_system=='Windows'",
    "mangohud-control; platform_system=='Linux'"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.2"
version_files = [
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[project.scripts]
demoknight = "demoknight:main"
